Update po files

--- a/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_DZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4239,6 +4239,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4522,6 +4525,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
