--- a/server/language/ca_ES.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ca_ES.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4126,6 +4126,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 #, fuzzy
 msgid "Empty folder"
 msgstr "Safates no trobades"
@@ -4408,6 +4411,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
