--- a/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4510,6 +4510,9 @@ msgstr "Ukázat podsložky"
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 #, fuzzy
 msgid "Empty folder"
 msgstr "Vyprázdnit složku"
@@ -4825,6 +4828,9 @@ msgstr "FW"
 
 msgid "RE"
 msgstr "RE"
+
+msgid "on behalf of"
+msgstr ""
 
 msgid "Safe Senders list is empty"
 msgstr ""
