--- a/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/en_US.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4123,6 +4123,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4401,6 +4404,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
