--- a/server/language/fi_FI.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fi_FI.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4490,6 +4490,9 @@ msgstr "Näytä alikansiot"
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 #, fuzzy
 msgid "Empty folder"
 msgstr "Tyhjennä kansio"
@@ -4807,6 +4810,9 @@ msgstr "FW"
 
 msgid "RE"
 msgstr "RE"
+
+msgid "on behalf of"
+msgstr ""
 
 msgid "Safe Senders list is empty"
 msgstr ""
