--- a/server/language/hr_HR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/hr_HR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4150,6 +4150,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4428,6 +4431,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
