--- a/server/language/ko_KR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ko_KR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4097,6 +4097,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4375,6 +4378,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
