--- a/server/language/lt_LT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/lt_LT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4140,6 +4140,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4418,6 +4421,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
