--- a/server/language/uk_UA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/uk_UA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4194,6 +4194,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 #, fuzzy
 msgid "Empty folder"
 msgstr "Не вдається очистити папку."
@@ -4476,6 +4479,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
