--- a/server/language/ar_LY.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_LY.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4199,6 +4199,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4477,6 +4480,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
