--- a/server/language/ar_SY.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar_SY.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4139,6 +4139,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4417,6 +4420,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
