--- a/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/fa_IR.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4108,6 +4108,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4386,6 +4389,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
