--- a/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ga_GA.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4181,6 +4181,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4459,6 +4462,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
