--- a/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2019-09-25 14:32+0200\n"
 "PO-Revision-Date: 2021-04-10 01:09+0000\n"
 "Last-Translator: Nuno Jerónimo <nuno.jeronimo@valsousa.pt>\n"
-"Language-Team: Portuguese (Portugal) "
-"<http://translate.kopano.io/projects/kopano/kopano-webapp/pt_PT/>\n"
+"Language-Team: Portuguese (Portugal) <http://translate.kopano.io/projects/"
+"kopano/kopano-webapp/pt_PT/>\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
@@ -4244,6 +4244,9 @@ msgstr "Mostrar subpastas"
 msgid "Open shared folder/store"
 msgstr "Abrir pastas/caixas partilhadas"
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr "Esvaziar pasta"
 
@@ -4528,6 +4531,9 @@ msgstr "FW"
 
 msgid "RE"
 msgstr "RE"
+
+msgid "on behalf of"
+msgstr ""
 
 msgid "Safe Senders list is empty"
 msgstr "Lista de remetentes seguros vazia"
