--- a/server/language/sv_SE.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/sv_SE.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -4118,6 +4118,9 @@ msgstr ""
 msgid "Open shared folder/store"
 msgstr ""
 
+msgid "Rename folder"
+msgstr ""
+
 msgid "Empty folder"
 msgstr ""
 
@@ -4396,6 +4399,9 @@ msgid "FW"
 msgstr ""
 
 msgid "RE"
+msgstr ""
+
+msgid "on behalf of"
 msgstr ""
 
 msgid "Safe Senders list is empty"
